# utf8everywhere-with-msvc

./: .gitignore  CMakeLists.txt  README.md  main.cpp  漢字.txt
project/: utf8_with_msvc.sln  utf8_with_msvc.vcxproj  utf8_with_msvc.vcxproj.filters
